Apply changes from Better