@@ -3,6 +3,7 @@ package care.better.abac.policy.execute;
 import com.google.common.base.Preconditions;
 import care.better.abac.exception.PolicyExecutionException;
 import lombok.NonNull;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.List;
 import java.util.Map;
@@ -24,14 +25,14 @@ public class PolicyHelper {
     }
 
     public ExecutableFunction findExecutableFunction(@NonNull String functionName) {
-        Preconditions.checkArgument(!functionName.isBlank(), "Function name is blank!");
+        Preconditions.checkArgument(!StringUtils.isBlank(functionName), "Function name is blank!");
         return executableFunctions.computeIfAbsent(functionName, f -> {
             throw new PolicyExecutionException("Function '" + functionName + "'not found!");
         });
     }
 
     public ExecutableConversion findExecutableConversion(@NonNull String conversionName) {
-        Preconditions.checkArgument(!conversionName.isBlank(), "Conversion name is blank!");
+        Preconditions.checkArgument(!StringUtils.isBlank(conversionName), "Conversion name is blank!");
         return executableConversions.computeIfAbsent(conversionName, f -> {
             throw new PolicyExecutionException("Conversion '" + conversionName + "'not found!");
         });
